--- a/back/templates/security/login.html.twig
+++ b/back/templates/security/login.html.twig
@@ -40,5 +40,10 @@
         Connexion
     </button>
 </form>
+<form action="{{ path('app_forgot_password_request') }}">
+    <button class="mt-3 btn btn-lg btn-danger" type="submit">
+        Vous avez oublié votre mot de passe ?
+    </button>
+</form>
 </div>
 {% endblock %}
