--- a/src/components/Profil/profil.scss
+++ b/src/components/Profil/profil.scss
@@ -25,6 +25,7 @@
 
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
@@ -34,7 +35,7 @@
    right:auto;
    bottom:auto;
    width: 700px;
-   height: 600px;
+   height: 400px;
    padding:10px;
    margin:2px;
    border-bottom: 20px solid vars.$color-title-last ;
@@ -44,6 +45,7 @@
   .profil-title {
     font-family: "Meta";
     font-size: 2rem;
+    text-transform: uppercase;
     text-align: center;
     color: vars.$color-title-first;
     font-variation-settings: "wght" 900, "ital" 1;
@@ -53,41 +55,59 @@
    .profil-list {
       font-family: "Meta";
       font-variation-settings: "wght" 900, "ital" 1;
-      color:red;
       padding-bottom:10px;
       margin:2px;
-    }
-  .profil-list-item {
+      text-align: left;
+
+       &-item {
     font-family:'Quicksand', sans-serif; 
+    color:red;
     padding-left:50px;
     padding-right:50px;
     margin:2px;
   }
 
+      &-info {
+        font-family:'Quicksand', sans-serif; 
+        color:black;
+        padding-left:50px;
+        padding-right:50px;
+        margin:2px;
+        font-weight: lighter;
+      }
+    }
+
   .profil-button {
     text-transform:uppercase;
     border:none;
-    width:150px;
+    width:190px;
     height:70px;
-    position:absolute;
-    border-radius:10px;
     font-family: "Meta";
     font-size: 15px;
-    padding-top:10px;
+    padding:12px;
+    margin:10px;
+    background-color: red;
+    color:white;
+    &:hover {
+      text-decoration: underline;
+    }
+
   }
 
   .profil-link-password {
     color:white;
     background-color: red;
-  }
-
-  .profil-pic {
-
-    max-width: 200px;
-    max-height: 200px;
-    position:absolute;
-    display: inline;
-    float:left;
+    width:190px;
+    height:50px;
+    font-family: "Meta";
+    text-transform:uppercase;
+    padding:10px;
+    margin:10px;
+    font-size: 15px;
+    border:none;
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
 }
