--- a/back/templates/back/user/list.html.twig
+++ b/back/templates/back/user/list.html.twig
@@ -16,6 +16,7 @@
                 <th>Email</th>
                 <th>Nickname</th>
                 <th>Roles</th>
+                <th>MdP</th>
                 <th></th>
                 <th></th>
             </tr>
@@ -27,6 +28,7 @@
                 <td>{{ user.email }}</td>
                 <td>{{ user.nickname }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                <td>{{ user.password }}</td>
                 <form action="{{ path('back_user_update', {id: user.id}) }}" method="get">
                     <td>
                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
