--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,7 @@
 
 // MAIN PROJET COLORS
 
-$color-background: #0d0557;
+$color-background: #050125;
 
 $color-text-main:white;
 $color-text-title:white;
