--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -6,18 +6,18 @@
   justify-content: center;
   align-items: center;
   width: 1200px;
-  height: 800px;
+  height: 740px;
   margin:1em auto;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
   
   .home-banniere {
     width: 100%;
-    height: 200px;
+    height: 300px;
     .home-banniere-img {
     background-size: cover;
     width: 100%;
-    height: 20vh;
+    height: 25vh;
     }
 
   }
@@ -25,8 +25,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin:5px;
-    padding-top:10px;
+    margin-bottom:3px;
     padding-bottom:10px;
     box-sizing: border-box;
     
@@ -42,20 +41,18 @@
      .popular-scenarios-scenario-image {
        width: 150px;
        height: 150px;
-       border:5px solid black;
+       border:2px solid black;
 
      }
      .popular-scenarios-scenario-text {
-      //  background-color: vars.$color-title-last;
        color:black;
        border:none;
        padding:5px;
-       padding-top:10px;
        text-align: justify;
        margin:2px;
        box-sizing: border-box;
        width: 200px;
-       height: 250px;
+       height: 230px;
 
      }
      .popular-scenarios-scenario-rate ul{
@@ -69,7 +66,7 @@
        color: black;
      }
      &:hover {
-       transform: scale(1.2);
+       transform: scale(1.03);
      }
     }  
     
