--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -2,9 +2,6 @@
 
 
 .nav-container {
-
-  // background-color: red;
-  border-bottom: 0.5px solid white;
   padding: 2px;
   width: 700px;
   height: 50px;
@@ -15,22 +12,20 @@
 
 
   .nav-link {
-
     margin: 5px;
     padding: 5px;
     text-align: center;
     text-transform: uppercase;
     color: vars.$color-nav-link;
     justify-content: space-evenly;
+    font-weight: bolder;
 
     &-active {
-      text-decoration: underline;
+      color: vars.$color-nav-link-hover;
     }
 
     &:hover {
       color: vars.$color-nav-link-hover;
-      transition: vars.$transition-slow;
-      transform: scale(1.1);
       cursor: pointer;
     }
 
