--- a/src/components/Profil/profil.scss
+++ b/src/components/Profil/profil.scss
@@ -22,7 +22,6 @@
 }
 
 .profil-container {
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,8 +37,8 @@
    height: 400px;
    padding:10px;
    margin:2px;
-   border-bottom: 20px solid vars.$color-title-last ;
-   border-right: 10px solid vars.$color-title-last ;  
+   border-bottom: 20px solid vars.$color-title-three ;
+   border-right: 10px solid vars.$color-title-two ;  
   
 
   .profil-title {
@@ -86,7 +85,7 @@
     font-size: 15px;
     padding:12px;
     margin:10px;
-    background-color: red;
+    background-color:vars.$color-background;
     color:white;
     &:hover {
       text-decoration: underline;
@@ -96,7 +95,7 @@
 
   .profil-link-password {
     color:white;
-    background-color: red;
+    background-color: vars.$color-background;
     width:190px;
     height:50px;
     font-family: "Meta";
@@ -105,9 +104,7 @@
     margin:10px;
     font-size: 15px;
     border:none;
-    &:hover {
-      text-decoration: underline;
-    }
+
   }
 
 }
