--- a/src/components/Profil/profil.scss
+++ b/src/components/Profil/profil.scss
@@ -28,9 +28,9 @@
   justify-content: flex-start;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  position:absolute;
+  position:relative;
    left:33%;
-   top:28%;
+   top:100%;
    right:auto;
    bottom:auto;
    width: 700px;
