--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -8,15 +8,14 @@
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
   position: relative;
-  left: 33%;
-  top: 28%;
-  right: auto;
-  bottom: auto;
-  width: 700px;
-  height: 650px;
-  padding: 10px;
-  margin: 2px;
-
+   left:33%;
+   top:100%;
+   right:auto;
+   bottom:100%;
+   width: 35%;
+   height: 35%;
+   padding:10px;
+   margin:2px;
   .about-title {
     font-family: "Meta";
     font-size: 2rem;
@@ -50,11 +49,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-      margin: 5px;
-      padding: 3px;
-      width: 100%;
-      height: 15%;
-
+      margin: 2%;
+      padding: 1%;
       .about-profil-image {
         height: 30px;
         width: 30px;
