--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,15 +2,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 .footer-container {
-  width: 100%;
-  height: 100px;
-  align-items: flex-end;
-  position: absolute;
-  top:100%;
-  bottom:0;
+ display: block;
+  align-items: baseline;
+  position: relative;
+   left:33%;
+   top:100%;
+   right:auto;
+   bottom:100%;
+   width: 35%;
+   height: 35%;
+   padding:10px;
+   margin:2px;
   font-family: 'Quicksand', sans-serif;
 
   .footer-link {
+    order:2;
   color:yellow;
   &:hover {
     color:vars.$color-nav-link-hover;
@@ -21,7 +27,7 @@
   }
   
   .footer-date {
-    padding-right:10px;
+    order: 1;
     color:yellow;
   }
 
