--- a/src/components/LegalNoticeContact/noticeContact.scss
+++ b/src/components/LegalNoticeContact/noticeContact.scss
@@ -9,21 +9,21 @@
 }
 
 .notice-container {
-
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: flex-start;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  position:absolute;
+  position:relative;
    left:33%;
-   top:28%;
+   top:100%;
    right:auto;
    bottom:auto;
-   width: 700px;
-   height: 600px;
-   padding:10px;
-   margin:2px;
+   width: 35%;
+   height: 35%;
+   padding:2%;
+   margin:1%;
    border-bottom: 20px solid vars.$color-title-last ;
    border-right: 10px solid vars.$color-title-last ;  
   
@@ -34,14 +34,14 @@
     text-align: center;
     color: vars.$color-title-first;
     font-variation-settings: "wght" 900, "ital" 1;
-    padding-bottom:10px;
+    padding-bottom:3%;
     margin:2px;
   }
    .notice-subtitle {
       font-family: "Meta";
       font-variation-settings: "wght" 900, "ital" 1;
       color:red;
-      padding-bottom:10px;
+      padding-bottom:3%;
       margin:2px;
     }
   .notice-text {
@@ -52,9 +52,9 @@
   }
 
   .notice-link {
-    margin:2px;
+    margin:1%;
     padding-top:5px;
-    padding-bottom:5px;
+    padding-bottom:3%;
     font-weight: bold;
     &:hover {
       color:red;
@@ -67,15 +67,15 @@
     text-transform:uppercase;
     font-weight: bold;
     border:none;
-    width:100px;
-    height:30px;
+    width:15%;
+    height:7%;
     position:absolute;
-    left:42%;
-    right:auto;
-    top:45%;
-    bottom:auto;
-    border-radius:10px;
-    font-family: "Meta";
+      left:42%;
+      right:auto;
+      top:91%;
+      bottom:auto;
+      border-radius:10px;
+      font-family: "Meta";
 
   }
 }
