--- a/src/components/Game/Win/win.scss
+++ b/src/components/Game/Win/win.scss
@@ -15,7 +15,7 @@
   justify-content: flex-start;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  position:absolute;
+  position:relative;
    left:33%;
    top:28%;
    right:auto;
