--- a/src/components/Popup/errorMessage.scss
+++ b/src/components/Popup/errorMessage.scss
@@ -20,6 +20,7 @@
     border-bottom: 10px solid vars.$color-title-three;
     border-right: 10px solid vars.$color-title-three;
 
+
     .errormessage-closed {
       transition: all 0.5s ease;
       position: absolute;
@@ -33,13 +34,10 @@
       -webkit-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
       -moz-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
       box-shadow: -3px 1px 6px 0px rgba(0, 0, 0, 0.1);
-
-
     }
     .errormessage-content {
       color: black;
-      margin-bottom: 5px;
-      margin-top: 10px;
+      margin-top:30%;
     }
   }
 }
