home-logo-board-position-ok

--- a/src/components/Game/Board/board.scss
+++ b/src/components/Game/Board/board.scss
@@ -47,7 +47,8 @@
 
 .board-home-link {
   position: fixed;
-  top: 50px;
-  left: 50px;
-  font-size: 2em;
+  top: 1%;
+  left: 1%;
+  font-size: 3em;
+  color: red;
 }
