update-about-utils-pics

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -52,8 +52,8 @@
       margin: 2%;
       padding: 1%;
       .about-profil-image {
-        height: 30px;
-        width: 30px;
+        height: 6%;
+        width: 6%;
       }
     }
   }
