--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -48,12 +48,22 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
+    border-color: black;
     align-items: center;
       margin: 2%;
       padding: 1%;
       .about-profil-image {
-        height: 6%;
-        width: 6%;
+        margin-bottom: 1%;
+        height: 50px;
+        width: 50px;
+        border-radius: 50%;
+      }
+      .about-profil-image-link {
+        height: 22px;
+        width: 22px;
+        margin-right: 3%;
+        margin-left: 3%;
+        
       }
     }
   }
