--- a/back/public/css/style.css
+++ b/back/public/css/style.css
@@ -15,12 +15,482 @@ h1 {
    margin-bottom: 30px;
 }
 
-.ghost {
+/* .ghost {
     background-image: url("./images/ghost.jpg");
-}
+} */
 
 .table {
     font-size: 1.20rem;
     font-weight: bold;
     font-style: oblique;
+}
+
+@keyframes move {
+    100% {
+        transform: translate3d(0, 0, 1px) rotate(360deg);
+    }
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #011137;
+    overflow: hidden;
+}
+
+.background span {
+    width: 1vmin;
+    height: 1vmin;
+    border-radius: 1vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 27;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.background span:nth-child(0) {
+    color: #ff6f00;
+    top: 23%;
+    left: 15%;
+    animation-duration: 112s;
+    animation-delay: -162s;
+    transform-origin: -22vw 0vh;
+    box-shadow: 2vmin 0 0.7605136585006307vmin currentColor;
+}
+.background span:nth-child(1) {
+    color: #f1f500;
+    top: 86%;
+    left: 20%;
+    animation-duration: 151s;
+    animation-delay: -156s;
+    transform-origin: -24vw 23vh;
+    box-shadow: -2vmin 0 0.44828531280706607vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: #11ff00;
+    top: 54%;
+    left: 8%;
+    animation-duration: 29s;
+    animation-delay: -60s;
+    transform-origin: -24vw 17vh;
+    box-shadow: -2vmin 0 0.9769067091573029vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: #2909c8;
+    top: 28%;
+    left: 88%;
+    animation-duration: 214s;
+    animation-delay: -58s;
+    transform-origin: -15vw -8vh;
+    box-shadow: 2vmin 0 1.009651392584848vmin currentColor;
+}
+.background span:nth-child(4) {
+    color: #11ff00;
+    top: 28%;
+    left: 52%;
+    animation-duration: 156s;
+    animation-delay: -91s;
+    transform-origin: 18vw 17vh;
+    box-shadow: 2vmin 0 0.5649248800702296vmin currentColor;
+}
+.background span:nth-child(5) {
+    color: #ff6f00;
+    top: 94%;
+    left: 73%;
+    animation-duration: 91s;
+    animation-delay: -112s;
+    transform-origin: -16vw 3vh;
+    box-shadow: 2vmin 0 1.119684754618502vmin currentColor;
+}
+.background span:nth-child(6) {
+    color: #2909c8;
+    top: 83%;
+    left: 99%;
+    animation-duration: 60s;
+    animation-delay: -38s;
+    transform-origin: 19vw 25vh;
+    box-shadow: -2vmin 0 1.1276204291913245vmin currentColor;
+}
+.background span:nth-child(7) {
+    color: #ff6f00;
+    top: 2%;
+    left: 29%;
+    animation-duration: 63s;
+    animation-delay: -1s;
+    transform-origin: 14vw -19vh;
+    box-shadow: -2vmin 0 0.6996709909563521vmin currentColor;
+}
+.background span:nth-child(8) {
+    color: #ff6f00;
+    top: 36%;
+    left: 97%;
+    animation-duration: 151s;
+    animation-delay: -48s;
+    transform-origin: 22vw -14vh;
+    box-shadow: 2vmin 0 0.574575488379049vmin currentColor;
+}
+.background span:nth-child(9) {
+    color: #ff0000;
+    top: 77%;
+    left: 83%;
+    animation-duration: 47s;
+    animation-delay: -118s;
+    transform-origin: -1vw -21vh;
+    box-shadow: -2vmin 0 0.6838661476740748vmin currentColor;
+}
+.background span:nth-child(10) {
+    color: #ff0000;
+    top: 65%;
+    left: 89%;
+    animation-duration: 150s;
+    animation-delay: -138s;
+    transform-origin: 17vw 15vh;
+    box-shadow: 2vmin 0 0.8629211811389197vmin currentColor;
+}
+.background span:nth-child(11) {
+    color: #ff6f00;
+    top: 100%;
+    left: 56%;
+    animation-duration: 44s;
+    animation-delay: -75s;
+    transform-origin: -6vw 0vh;
+    box-shadow: -2vmin 0 0.8378396881258117vmin currentColor;
+}
+.background span:nth-child(12) {
+    color: #ff6f00;
+    top: 14%;
+    left: 99%;
+    animation-duration: 199s;
+    animation-delay: -191s;
+    transform-origin: 16vw -1vh;
+    box-shadow: -2vmin 0 0.27344504295789607vmin currentColor;
+}
+.background span:nth-child(13) {
+    color: #ff6f00;
+    top: 9%;
+    left: 92%;
+    animation-duration: 132s;
+    animation-delay: -19s;
+    transform-origin: -16vw 17vh;
+    box-shadow: -2vmin 0 0.977036984150988vmin currentColor;
+}
+.background span:nth-child(14) {
+    color: #ff6f00;
+    top: 5%;
+    left: 83%;
+    animation-duration: 108s;
+    animation-delay: -48s;
+    transform-origin: -6vw 18vh;
+    box-shadow: -2vmin 0 0.3389313896300452vmin currentColor;
+}
+.background span:nth-child(15) {
+    color: #f1f500;
+    top: 16%;
+    left: 74%;
+    animation-duration: 189s;
+    animation-delay: -97s;
+    transform-origin: 20vw 4vh;
+    box-shadow: 2vmin 0 0.9810641771900743vmin currentColor;
+}
+.background span:nth-child(16) {
+    color: #2909c8;
+    top: 14%;
+    left: 95%;
+    animation-duration: 104s;
+    animation-delay: -90s;
+    transform-origin: 2vw 8vh;
+    box-shadow: -2vmin 0 0.5347333438571331vmin currentColor;
+}
+.background span:nth-child(17) {
+    color: #ff0000;
+    top: 57%;
+    left: 57%;
+    animation-duration: 88s;
+    animation-delay: -43s;
+    transform-origin: -9vw -4vh;
+    box-shadow: 2vmin 0 1.1817493189930552vmin currentColor;
+}
+.background span:nth-child(18) {
+    color: #f1f500;
+    top: 68%;
+    left: 65%;
+    animation-duration: 215s;
+    animation-delay: -94s;
+    transform-origin: -14vw -14vh;
+    box-shadow: -2vmin 0 0.5859095233449214vmin currentColor;
+}
+.background span:nth-child(19) {
+    color: #2909c8;
+    top: 89%;
+    left: 85%;
+    animation-duration: 227s;
+    animation-delay: -133s;
+    transform-origin: 15vw 22vh;
+    box-shadow: 2vmin 0 0.7935358104723049vmin currentColor;
+}
+.background span:nth-child(20) {
+    color: #11ff00;
+    top: 97%;
+    left: 62%;
+    animation-duration: 166s;
+    animation-delay: -8s;
+    transform-origin: -12vw 11vh;
+    box-shadow: 2vmin 0 0.8879698924325425vmin currentColor;
+}
+.background span:nth-child(21) {
+    color: #f1f500;
+    top: 43%;
+    left: 87%;
+    animation-duration: 114s;
+    animation-delay: -191s;
+    transform-origin: -8vw 8vh;
+    box-shadow: 2vmin 0 0.5043562287844696vmin currentColor;
+}
+.background span:nth-child(22) {
+    color: #11ff00;
+    top: 98%;
+    left: 78%;
+    animation-duration: 53s;
+    animation-delay: -17s;
+    transform-origin: 8vw -18vh;
+    box-shadow: -2vmin 0 0.5432810555625147vmin currentColor;
+}
+.background span:nth-child(23) {
+    color: #f1f500;
+    top: 31%;
+    left: 50%;
+    animation-duration: 164s;
+    animation-delay: -17s;
+    transform-origin: 25vw -10vh;
+    box-shadow: -2vmin 0 0.5705115666291449vmin currentColor;
+}
+.background span:nth-child(24) {
+    color: #ff6f00;
+    top: 69%;
+    left: 57%;
+    animation-duration: 71s;
+    animation-delay: -225s;
+    transform-origin: 9vw -2vh;
+    box-shadow: -2vmin 0 0.44065117028559464vmin currentColor;
+}
+.background span:nth-child(25) {
+    color: #ff0000;
+    top: 25%;
+    left: 78%;
+    animation-duration: 216s;
+    animation-delay: -25s;
+    transform-origin: 6vw -9vh;
+    box-shadow: -2vmin 0 0.8296083512166192vmin currentColor;
+}
+.background span:nth-child(26) {
+    color: #11ff00;
+    top: 9%;
+    left: 44%;
+    animation-duration: 234s;
+    animation-delay: -10s;
+    transform-origin: 7vw -23vh;
+    box-shadow: 2vmin 0 0.47296709724154984vmin currentColor;
+}
+.background span:nth-child(27) {
+    color: #f1f500;
+    top: 75%;
+    left: 24%;
+    animation-duration: 176s;
+    animation-delay: -51s;
+    transform-origin: 12vw -5vh;
+    box-shadow: -2vmin 0 1.0006920245161421vmin currentColor;
+}
+.background span:nth-child(28) {
+    color: #ff0000;
+    top: 56%;
+    left: 4%;
+    animation-duration: 174s;
+    animation-delay: -123s;
+    transform-origin: -3vw 20vh;
+    box-shadow: -2vmin 0 0.9303242238267082vmin currentColor;
+}
+.background span:nth-child(29) {
+    color: #ff6f00;
+    top: 55%;
+    left: 47%;
+    animation-duration: 18s;
+    animation-delay: -62s;
+    transform-origin: -12vw -15vh;
+    box-shadow: -2vmin 0 0.2867595530388036vmin currentColor;
+}
+.background span:nth-child(30) {
+    color: #11ff00;
+    top: 21%;
+    left: 71%;
+    animation-duration: 102s;
+    animation-delay: -55s;
+    transform-origin: 2vw -3vh;
+    box-shadow: -2vmin 0 0.3507107435257124vmin currentColor;
+}
+.background span:nth-child(31) {
+    color: #ff6f00;
+    top: 15%;
+    left: 22%;
+    animation-duration: 193s;
+    animation-delay: -28s;
+    transform-origin: 5vw -8vh;
+    box-shadow: 2vmin 0 0.8483324487189483vmin currentColor;
+}
+.background span:nth-child(32) {
+    color: #ff6f00;
+    top: 42%;
+    left: 62%;
+    animation-duration: 117s;
+    animation-delay: -153s;
+    transform-origin: -7vw -11vh;
+    box-shadow: -2vmin 0 1.2231585864902037vmin currentColor;
+}
+.background span:nth-child(33) {
+    color: #11ff00;
+    top: 2%;
+    left: 67%;
+    animation-duration: 222s;
+    animation-delay: -181s;
+    transform-origin: 4vw -11vh;
+    box-shadow: -2vmin 0 0.7055247589054967vmin currentColor;
+}
+.background span:nth-child(34) {
+    color: #2909c8;
+    top: 81%;
+    left: 9%;
+    animation-duration: 16s;
+    animation-delay: -72s;
+    transform-origin: 18vw -10vh;
+    box-shadow: 2vmin 0 1.1138177218607037vmin currentColor;
+}
+.background span:nth-child(35) {
+    color: #11ff00;
+    top: 34%;
+    left: 36%;
+    animation-duration: 226s;
+    animation-delay: -179s;
+    transform-origin: 13vw 1vh;
+    box-shadow: 2vmin 0 0.7234964649676088vmin currentColor;
+}
+.background span:nth-child(36) {
+    color: #ff0000;
+    top: 48%;
+    left: 85%;
+    animation-duration: 64s;
+    animation-delay: -6s;
+    transform-origin: 20vw 12vh;
+    box-shadow: -2vmin 0 0.4795408720103389vmin currentColor;
+}
+.background span:nth-child(37) {
+    color: #ff6f00;
+    top: 22%;
+    left: 9%;
+    animation-duration: 112s;
+    animation-delay: -102s;
+    transform-origin: 18vw -12vh;
+    box-shadow: 2vmin 0 0.8773407003873197vmin currentColor;
+}
+.background span:nth-child(38) {
+    color: #11ff00;
+    top: 70%;
+    left: 91%;
+    animation-duration: 33s;
+    animation-delay: -73s;
+    transform-origin: 7vw 25vh;
+    box-shadow: -2vmin 0 0.5828919661029908vmin currentColor;
+}
+.background span:nth-child(39) {
+    color: #11ff00;
+    top: 73%;
+    left: 65%;
+    animation-duration: 39s;
+    animation-delay: -11s;
+    transform-origin: -7vw -2vh;
+    box-shadow: -2vmin 0 0.9421473254832529vmin currentColor;
+}
+.background span:nth-child(40) {
+    color: #f1f500;
+    top: 54%;
+    left: 7%;
+    animation-duration: 64s;
+    animation-delay: -148s;
+    transform-origin: -1vw 24vh;
+    box-shadow: 2vmin 0 0.5218685614528702vmin currentColor;
+}
+.background span:nth-child(41) {
+    color: #11ff00;
+    top: 25%;
+    left: 98%;
+    animation-duration: 50s;
+    animation-delay: -210s;
+    transform-origin: -20vw 12vh;
+    box-shadow: 2vmin 0 0.7708195629037722vmin currentColor;
+}
+.background span:nth-child(42) {
+    color: #11ff00;
+    top: 6%;
+    left: 10%;
+    animation-duration: 232s;
+    animation-delay: -69s;
+    transform-origin: 20vw 19vh;
+    box-shadow: -2vmin 0 0.49143576940905076vmin currentColor;
+}
+.background span:nth-child(43) {
+    color: #ff0000;
+    top: 78%;
+    left: 54%;
+    animation-duration: 56s;
+    animation-delay: -88s;
+    transform-origin: -17vw 12vh;
+    box-shadow: 2vmin 0 1.1189965320088202vmin currentColor;
+}
+.background span:nth-child(44) {
+    color: #2909c8;
+    top: 30%;
+    left: 24%;
+    animation-duration: 163s;
+    animation-delay: -45s;
+    transform-origin: -13vw -1vh;
+    box-shadow: -2vmin 0 1.2057357707204035vmin currentColor;
+}
+.background span:nth-child(45) {
+    color: #ff0000;
+    top: 67%;
+    left: 14%;
+    animation-duration: 235s;
+    animation-delay: -123s;
+    transform-origin: 12vw -22vh;
+    box-shadow: 2vmin 0 0.2914954091724662vmin currentColor;
+}
+.background span:nth-child(46) {
+    color: #11ff00;
+    top: 33%;
+    left: 90%;
+    animation-duration: 120s;
+    animation-delay: -42s;
+    transform-origin: 9vw -11vh;
+    box-shadow: 2vmin 0 0.8532153896289643vmin currentColor;
+}
+.background span:nth-child(47) {
+    color: #ff0000;
+    top: 47%;
+    left: 44%;
+    animation-duration: 17s;
+    animation-delay: -157s;
+    transform-origin: -23vw 25vh;
+    box-shadow: 2vmin 0 0.702007713158632vmin currentColor;
+}
+.background span:nth-child(48) {
+    color: #ff6f00;
+    top: 28%;
+    left: 70%;
+    animation-duration: 219s;
+    animation-delay: -105s;
+    transform-origin: -12vw 24vh;
+    box-shadow: 2vmin 0 0.6802653874023827vmin currentColor;
 }
