--- a/back/templates/base.html.twig
+++ b/back/templates/base.html.twig
@@ -22,7 +22,7 @@
 
     {% include 'back/include/_nav.html.twig' %}
 
-    <body class="ghost">
+    <body>
 		<div class="container">
 			<div class="row">
 				<div class="col">
@@ -30,8 +30,7 @@
 				</div>
 			</div>
 				<hr>
-				<div class="small text-secondary pb-3 text-center">&#128123; &#128123; &#128123; Le BackOffice des Code Busters &#128123; &#128123; &#128123;</div>
-			</div>
-
+			<div class="small text-secondary pb-3 text-center">&#128123; &#128123; &#128123; Le BackOffice des Code Busters &#128123; &#128123; &#128123;</div>
+		</div>
     </body>
 </html>
