--- a/src/components/Loader/loader.scss
+++ b/src/components/Loader/loader.scss
@@ -5,7 +5,7 @@
   display: inline-block;
   width: 30px;
   height: 30px;
-  position: absolute;
+  position: fixed;
   border: 4px solid vars.$color-nav-link;
   top: 50%;
   animation: loader 2s infinite ease;
