--- a/src/components/Header/title.scss
+++ b/src/components/Header/title.scss
@@ -10,11 +10,11 @@
   .title-container {
     box-sizing: border-box;
     margin: 0;
-    padding-top: 5px;
+    // padding-top: 5px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    width: 90vw;
     height: 15vh;
 
     .title-title {
