--- a/src/components/Popup/signin.scss
+++ b/src/components/Popup/signin.scss
@@ -23,11 +23,10 @@
     color: white;
     padding: 5px;
     width: 300px;
-    height: 230px;
+    height: 250px;
     border-radius: 10%;
     border-bottom: 10px solid vars.$color-title-five;
     border-right: 10px solid vars.$color-title-five;
-  
 
     .signin-closed {
       transition: all 0.5s ease;
@@ -42,14 +41,12 @@
       -webkit-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
       -moz-box-shadow: -4px -2px 6px 0px rgba(0, 0, 0, 0.1);
       box-shadow: -3px 1px 6px 0px rgba(0, 0, 0, 0.1);
-
-      // &:hover {
-      //     transform: rotate(45deg);
-      //     font-size: 1em;
-      //     border: none;
-      //     border-radius: 1em;
-      //   }
-
+      &:hover {
+          transform: rotate(45deg);
+          font-size: 1em;
+          border: none;
+          border-radius: 1em;
+        }
     }
 
     .signin-form {
@@ -58,19 +55,11 @@
       color: black;
       padding-bottom:2px;
 
-      .signin-field {
-        border: none;
-        color: black;
-        margin-bottom: 5px;
-        margin-top: 10px;
-      }
-
       .signin-password-info {
         font-size: 12px;
         font-style: italic;
         padding-top:2px;
         padding-bottom:2px;
-
       }
 
       .signin-button {
