--- a/src/components/Header/title.scss
+++ b/src/components/Header/title.scss
@@ -8,14 +8,11 @@
     font-weight: normal;
   }
   .title-container {
-    box-sizing: border-box;
-    margin: 0;
-    // padding-top: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // box-sizing: border-box;
+    padding-bottom: 20px;
     width: 90vw;
     height: 15vh;
+    display: inline;
 
     .title-title {
       transition: all 0.5s;
