--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,90 +1,83 @@
 @use 'src/styles/vars';
 
-.home-main{
+.home-main {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 1200px;
-  height: 740px;
-  margin:1em auto;
-  background-color: vars.$color-popup-background;
+
+  .home-text {
+    color: yellow;
+    margin: 30px;
+  }
+.popular-scenarios-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 3px;
+  padding: 10px;
   box-sizing: border-box;
-  
-  .home-banniere {
-    width: 100%;
-    height: 300px;
-    .home-banniere-img {
-    background-size: cover;
-    width: 100%;
-    height: 25vh;
+  background-color: vars.$color-popup-background;
+
+  .popular-scenarios-scenario {
+    width: 250px;
+    height: 450px;
+    margin:10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 5px 5px 5px rgb(165, 159, 159);
+    transition: all 0.5s ease;
+    cursor: pointer;
+
+    .popular-scenarios-scenario-image {
+      width: 150px;
+      height: 150px;
+      border: 2px solid black;
+
     }
 
-  }
-  .popular-scenarios-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin-bottom:3px;
-    padding-bottom:10px;
-    box-sizing: border-box;
-    
-    .popular-scenarios-scenario {
-      width: 250px;
-      height: 450px;
+    .popular-scenarios-scenario-text {
+      color: black;
+      border: none;
+      padding: 5px;
+      text-align: justify;
+      margin: 2px;
+      box-sizing: border-box;
+      width: 200px;
+      height: 230px;
+    }
+
+    .popular-scenarios-scenario-rate ul {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-shadow: 5px 5px 5px rgb(165, 159, 159);
-      transition: all 0.5s ease;
-      cursor: pointer;
-     .popular-scenarios-scenario-image {
-       width: 150px;
-       height: 150px;
-       border:2px solid black;
+    }
 
-     }
-     .popular-scenarios-scenario-text {
-       color:black;
-       border:none;
-       padding:5px;
-       text-align: justify;
-       margin:2px;
-       box-sizing: border-box;
-       width: 200px;
-       height: 230px;
-
-     }
-     .popular-scenarios-scenario-rate ul{
-       display: flex;
-       
-     }
-     .--gold {
+    .--gold {
       color: yellow;
-     }
-     .scenario-star{
-       color: black;
-     }
-     &:hover {
-       transform: scale(1.03);
-     }
-    }  
-    
-    .popular-scenarios-subtitle {
+    }
+
+    .scenario-star {
+      color: black;
+    }
+
+    &:hover {
+      transform: scale(1.03);
+    }
+  }
+
+  .popular-scenarios-subtitle {
     font-family: "Meta";
-    font-variation-settings: "wght" 900, "ital" 1;
-    color:red;
-    padding-bottom:2px;
-    margin:2px;
+    font-variation-settings: "wght"900, "ital"1;
+    color: red;
+    padding-bottom: 2px;
+    margin: 2px;
   }
-  }
- .unavailable{
-  width: 250px;
-  height: 450px;
-  background-color: rgba(0, 0, 0, 0.644);
-  position: absolute;
- }
 }
 
-
-
+.unavailable {
+  width: 260px;
+  height: 460px;
+  background-color: rgba(39, 38, 38, 0.644);
+  position: absolute;
+}
+}
