--- a/src/components/Scenarios/scenarios.scss
+++ b/src/components/Scenarios/scenarios.scss
@@ -25,13 +25,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 5px;
-    padding-top: 10px;
+    margin: 10px;
+    padding: 10px;
 
     .scenarios-scenario {
       width: 400px;
       height:390px;
       display: flex;
+      margin: 10px;
       flex-direction: column;
       align-items: center;
       box-shadow: 5px 5px 5px rgb(165, 159, 159);
@@ -104,10 +105,10 @@
     }
   }
   .unavailable{
-    width: 400px;
-    height: 390px;
+    width: 413px;
+    height: 410px;
     margin-top:3px;
-    background-color: rgba(0, 0, 0, 0.644);
+    background-color: rgba(39, 38, 38, 0.644);
     position: absolute;
    } 
 }
