--- a/src/components/Game/Intro/intro.scss
+++ b/src/components/Game/Intro/intro.scss
@@ -16,10 +16,7 @@
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
   position:relative;
-   left:33%;
-   top:28%;
-   right:auto;
-   bottom:auto;
+   left:28%;
    width: 700px;
    height: 600px;
    padding:10px;
@@ -51,8 +48,8 @@
     margin:10px;
   }
   .intro-pic {
-    max-width: 300px;
-    max-height: 300px;
+    width: 200px;
+    height: 200px;
     display: inline-flex;
     align-self:center;
     }
