--- a/src/components/Profil/profil.scss
+++ b/src/components/Profil/profil.scss
@@ -1,15 +1,4 @@
-// .profil-main{
-//   display: flex;
-//   justify-content: center;
-//   .profil-container{
-//     background-color: white;
-//     margin-top: 1em;
-//     width: 50%;
-//     .profil-title {
-//       font-size: 2em;
-//     }
-//   }
-// }
+
 
 @use 'src/styles/vars';
 
@@ -21,20 +10,13 @@
   font-weight: normal;
 }
 
-.profil-container {
+.profil-main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  position:relative;
-   left:33%;
-   top:100%;
-   right:auto;
-   bottom:auto;
-   width: 35%;
-   height: 35%;
    padding:4%;
    margin:2%;
    border-bottom: 20px solid vars.$color-title-three ;
