background stars ok

--- a/src/components/Game/Win/win.scss
+++ b/src/components/Game/Win/win.scss
@@ -8,6 +8,78 @@
   font-weight: normal;
 }
 
+@function multiple-box-shadow($n) {
+  $value: '#{random(2000)}px #{random(2000)}px #FFF';
+  @for $i from 2 through $n
+    {$value: '#{$value} , #{random(2000)}px #{random(2000)}px #FFF';}
+
+  @return unquote($value)
+
+};
+$shadows-small:  multiple-box-shadow(700);
+$shadows-medium: multiple-box-shadow(200);
+$shadows-big:    multiple-box-shadow(100);
+
+#stars{
+  position: fixed; 
+  left: -100px; 
+  width: 1px;
+  height: 1px;
+  background: transparent;
+  box-shadow: $shadows-small;
+  animation: animStar 50s linear infinite;
+  
+  &:after{
+    content: " ";
+    width: 1px;
+    height: 1px;
+    background: transparent;
+    box-shadow: $shadows-small;
+  }
+}  
+#stars2{
+  position: fixed;
+  left: -100px; 
+  width: 2px;
+  height: 2px;
+  background: transparent;
+  box-shadow: $shadows-medium;;
+  animation			: animStar 100s linear infinite;
+
+    
+  &:after{
+    content: " ";
+    width: 2px;
+    height: 2px;
+    background: transparent;
+    box-shadow: $shadows-medium
+  }
+}  
+#stars3{
+  position: fixed;
+  left: -100px;  
+  width: 3px;
+  height: 3px;
+  background: transparent;
+  box-shadow: $shadows-big;
+  animation: animStar 150s linear infinite;
+    
+  &:after{
+    content: " ";
+    width: 3px;
+    height: 3px;
+    background: transparent;
+    box-shadow: $shadows-big;
+  }
+}
+@keyframes animStar{
+  from	{
+    transform: translateY(0px)
+  }
+  to	{	
+    transform: translateY(-900px)
+  }
+}
 .win-container {
 
   display: flex;
@@ -15,9 +87,6 @@
   justify-content: flex-start;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  position:relative;
-   left:33%;
-   top:28%;
    right:auto;
    bottom:auto;
    width: 700px;
