--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,7 +4,7 @@
 $color-background: #050125;
 
 $color-text-main:white;
-$color-text-title:white;
+$color-text-title:#050125;
 $color-text-content:white;
 
 $color-nav-link:yellow;
@@ -14,7 +14,7 @@ $color-popup-background:rgb(247, 230, 230);
 $color-popup-text:yellow;
 $color-popup-shadow:black;
 
-$color-button-background:#07032b;
+$color-button-background:#050125;
 $color-button-text:yellow;
 
 // TITLE COLORS
@@ -32,9 +32,5 @@ $color-title-last:#060169;
 $transition-fast: 0.2s;
 $transition-slow: 1s;
 
-// MIXIN TEMPLAGE PAGE
 
-// MIXIN TEMPLATE POPUP
-
-// FOND ESPACE
 
