--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,61 +1,68 @@
 @use 'src/styles/vars';
+
 @function multiple-box-shadow($n) {
   $value: '#{random(2000)}px #{random(2000)}px #FFF';
-  @for $i from 2 through $n
-    {$value: '#{$value} , #{random(2000)}px #{random(2000)}px #FFF';}
+
+  @for $i from 2 through $n {
+    $value: '#{$value} , #{random(2000)}px #{random(2000)}px #FFF';
+  }
 
   @return unquote($value)
+}
 
-};
-$shadows-small:  multiple-box-shadow(700);
+;
+$shadows-small: multiple-box-shadow(700);
 $shadows-medium: multiple-box-shadow(200);
-$shadows-big:    multiple-box-shadow(100);
+$shadows-big: multiple-box-shadow(100);
 
-#stars{
-  position: fixed; 
-  left: -100px; 
+#stars {
+  position: fixed;
+  left: -100px;
   width: 1px;
   height: 1px;
   background: transparent;
   box-shadow: $shadows-small;
   animation: animStar 50s linear infinite;
-  
-  &:after{
+
+  &:after {
     content: " ";
     width: 1px;
     height: 1px;
     background: transparent;
     box-shadow: $shadows-small;
   }
-}  
-#stars2{
+}
+
+#stars2 {
   position: fixed;
-  left: -100px; 
+  left: -100px;
   width: 2px;
   height: 2px;
   background: transparent;
-  box-shadow: $shadows-medium;;
-  animation			: animStar 100s linear infinite;
+  box-shadow: $shadows-medium;
+  ;
+  animation: animStar 100s linear infinite;
 
-    
-  &:after{
+
+  &:after {
     content: " ";
     width: 2px;
     height: 2px;
     background: transparent;
     box-shadow: $shadows-medium
   }
-}  
-#stars3{
+}
+
+#stars3 {
   position: fixed;
-  left: -100px;  
+  left: -100px;
   width: 3px;
   height: 3px;
   background: transparent;
   box-shadow: $shadows-big;
   animation: animStar 150s linear infinite;
-    
-  &:after{
+
+  &:after {
     content: " ";
     width: 3px;
     height: 3px;
@@ -63,14 +70,17 @@ $shadows-big:    multiple-box-shadow(100);
     box-shadow: $shadows-big;
   }
 }
-@keyframes animStar{
-  from	{
+
+@keyframes animStar {
+  from {
     transform: translateY(0px)
   }
-  to	{	
+
+  to {
     transform: translateY(-900px)
   }
 }
+
 .about-container {
 
   display: flex;
@@ -78,28 +88,25 @@ $shadows-big:    multiple-box-shadow(100);
   justify-content: flex-start;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-   width: 35%;
-   height: 35%;
-   padding:10px;
-   margin:2px;
+  width: 50%;
+  height: 35%;
+  margin: 1em auto;
+  border-bottom: 20px solid vars.$color-title-five ;
+  border-right: 10px solid vars.$color-title-two ;  
+
   .about-title {
     font-family: "Meta";
     font-size: 2rem;
     text-align: center;
-    color: vars.$color-title-first;
+    text-transform: uppercase;
+    color: vars.$color-text-title;
     font-variation-settings: "wght"900, "ital"1;
     padding-bottom: 10px;
     margin: 2px;
+    padding-top:5px;
   }
 
-  .about-subtitle {
-    font-family: "Meta";
-    font-variation-settings: "wght"900, "ital"1;
-    color: red;
-    padding-bottom: 10px;
-    margin: 5px;
-    padding-top:10px;
-  }
+
 
   .about-text {
     font-family: 'Quicksand', sans-serif;
@@ -111,25 +118,36 @@ $shadows-big:    multiple-box-shadow(100);
   .about-section {
 
     .about-profil {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    border-color: black;
-    align-items: center;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      border-color: black;
+      align-items: center;
       margin: 2%;
       padding: 1%;
+
       .about-profil-image {
         margin-bottom: 1%;
         height: 50px;
         width: 50px;
         border-radius: 50%;
       }
+
       .about-profil-image-link {
         height: 22px;
         width: 22px;
         margin-right: 3%;
         margin-left: 3%;
-        
+        margin-top:3%;
+      }
+
+      .about-profil-name {
+        font-family: "Meta";
+        font-variation-settings: "wght"900, "ital"1;
+        color: vars.$color-text-title;
+        padding-bottom: 5px;
+        margin: 5px;
+        font-size: 1rem;
       }
     }
   }
