--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -4,7 +4,7 @@
 .footer-container {
  display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   font-family: 'Quicksand', sans-serif;
   font-size: 10px;
 
