--- a/src/components/Game/Intro/intro.scss
+++ b/src/components/Game/Intro/intro.scss
@@ -85,28 +85,30 @@ $shadows-big:    multiple-box-shadow(100);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-   width: 700px;
-   height: 600px;
-   padding:10px;
-   margin:2px;
-   border-bottom: 20px solid vars.$color-title-last ;
-   border-right: 10px solid vars.$color-title-last ;  
+  width: 50%;
+  height: 45%;
+  margin: 1em auto;
+  border-bottom: 20px solid vars.$color-title-five ;
+  border-right: 10px solid vars.$color-title-two ;  
   
   .intro-title {
     font-family: "Meta";
     font-size: 2rem;
     text-align: center;
-    color: vars.$color-title-first;
-    font-variation-settings: "wght" 900, "ital" 1;
-    padding-bottom:10px;
-    margin:2px;
+    text-transform: uppercase;
+    color: vars.$color-text-title;
+    font-variation-settings: "wght"900, "ital"1;
+    padding-bottom: 10px;
+    margin: 2px;
+    padding-top:5px;
   }
    .intro-subtitle {
       font-family: "Meta";
       font-variation-settings: "wght" 900, "ital" 1;
-      color:red;
+      color: vars.$color-text-title;
       padding-bottom:10px;
       margin:2px;
       margin-top:10px;
@@ -115,15 +117,13 @@ $shadows-big:    multiple-box-shadow(100);
     font-family:'Quicksand', sans-serif; 
     padding-left:50px;
     padding-right:50px;
-    margin:10px;
+    margin-bottom:5%;
   }
-  .intro-pic {
-    width: 200px;
-    height: 200px;
-    display: inline-flex;
-    align-self:center;
+    .intro-pic {
+    max-width: 55%;
+    max-height: 55%;
+    display:inline-flex;
     }
-  }
   .intro-button {
 
     background-color:#11ffee00 ;
@@ -140,4 +140,4 @@ $shadows-big:    multiple-box-shadow(100);
       cursor:pointer;
     }
 }
-
+ }
