--- a/src/components/Popup/errorMessage.scss
+++ b/src/components/Popup/errorMessage.scss
@@ -17,8 +17,8 @@
     width: 300px;
     height: 200px;
     border-radius: 10%;
-    border-bottom: 10px solid vars.$color-title-three;
-    border-right: 10px solid vars.$color-title-three;
+    border-bottom: 10px solid vars.$color-title-two;
+    border-right: 10px solid vars.$color-title-two;
 
 
     .errormessage-closed {
