--- a/src/components/Popup/updatePassword.scss
+++ b/src/components/Popup/updatePassword.scss
@@ -25,8 +25,8 @@
     width: 300px;
     height: 230px;
     border-radius: 10%;
-    border-bottom: 10px solid vars.$color-title-five;
-    border-right: 10px solid vars.$color-title-five;
+    border-bottom: 10px solid vars.$color-title-two;
+    border-right: 10px solid vars.$color-title-two;
   
 
     .signin-closed {
