--- a/src/components/Profil/profil.scss
+++ b/src/components/Profil/profil.scss
@@ -17,22 +17,23 @@
   justify-content: center;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-   height: 35%;
-   padding:4%;
-   margin:2%;
-   border-bottom: 20px solid vars.$color-title-three ;
-   border-right: 10px solid vars.$color-title-two ;  
+  width: 50%;
+  height: 35%;
+  margin: 1em auto;
+  border-bottom: 20px solid vars.$color-title-five ;
+  border-right: 10px solid vars.$color-title-two ;  
   
 
   .profil-title {
     font-family: "Meta";
     font-size: 2rem;
-    text-transform: uppercase;
     text-align: center;
-    color: vars.$color-title-first;
-    font-variation-settings: "wght" 900, "ital" 1;
-    padding-bottom:10px;
-    margin:2px;
+    text-transform: uppercase;
+    color: vars.$color-text-title;
+    font-variation-settings: "wght"900, "ital"1;
+    padding-bottom: 10px;
+    margin: 2px;
+    padding-top:5px;
   }
    .profil-list {
       font-family: "Meta";
@@ -40,6 +41,7 @@
       padding-bottom:10px;
       margin:2px;
       text-align: left;
+      text-transform: uppercase;
 
        &-item {
     font-family:'Quicksand', sans-serif; 
@@ -56,6 +58,7 @@
         padding-right:50px;
         margin:2px;
         font-weight: lighter;
+        text-transform: lowercase;
       }
     }
 
