--- a/src/components/Scenarios/scenarios.scss
+++ b/src/components/Scenarios/scenarios.scss
@@ -84,13 +84,13 @@ $shadows-big:    multiple-box-shadow(100);
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 900px;
-  height: 900px;
+  width: 60%;
+  height: 35%;
   margin: 1em auto;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  border-bottom: 20px solid vars.$color-title-four;
-  border-right: 10px solid vars.$color-title-five;
+  border-bottom: 20px solid vars.$color-title-five ;
+  border-right: 10px solid vars.$color-title-two ;  
 
   .scenarios-list {
     display: flex;
@@ -120,7 +120,7 @@ $shadows-big:    multiple-box-shadow(100);
         font-family: "Meta";
         font-size: 2rem;
         text-align: center;
-        color: vars.$color-title-first;
+        color: vars.$color-text-title;
         font-variation-settings: "wght"900, "ital"1;
         padding-bottom: 10px;
         margin: 2px;
@@ -129,7 +129,7 @@ $shadows-big:    multiple-box-shadow(100);
       .scenarios-subtitle {
         font-family: "Meta";
         font-variation-settings: "wght" 900, "ital" 1;
-        color:red;
+        color: vars.$color-text-title;
         padding-bottom:10px;
         margin:2px;
       }
