fix/translate-reset-pwd-done+background-bo-wip

--- a/back/templates/back/game/list.html.twig
+++ b/back/templates/back/game/list.html.twig
@@ -8,7 +8,7 @@
 	<div class="row d-flex">
 		<div class="col-11"><h1>Liste des Parties</h1></div>
     </div>
-    <table class="table table-striped table-hover">
+    <table class="table table-hover table-dark table-stripedr">
         <thead>
             <tr>
             <th>Id</th>
