--- a/back/public/css/style.css
+++ b/back/public/css/style.css
@@ -15,6 +15,14 @@ h1 {
    margin-bottom: 30px;
 }
 
+h1 {
+    color: white; 
+}
+
+label {
+    color: white; 
+}
+
 .table {
     font-size: 1.20rem;
     font-weight: bold;
