--- a/back/templates/back/game/score.html.twig
+++ b/back/templates/back/game/score.html.twig
@@ -8,7 +8,7 @@
 	<div class="row d-flex">
 		<div class="col-11"><h1>Tableau des high scores</h1></div>
     </div>
-    <table class="table table-striped table-hover">
+    <table class="table table-hover table-dark table-striped">
         <thead>
             <tr>
                 <th>user</th>
