--- a/back/templates/back/include/_nav.html.twig
+++ b/back/templates/back/include/_nav.html.twig
@@ -1,5 +1,5 @@
 {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-<nav class="dark navbar-dark bg-light container-fluid py-3">
+<nav class="navbar-dark bg-dark container-fluid py-3">
 	<div class="row">
 		<div class="col-6">
 			<ul class="nav nav-pills ms-3">
