--- a/back/templates/reset_password/request.html.twig
+++ b/back/templates/reset_password/request.html.twig
@@ -1,22 +1,21 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Réinitialiser votre mot de passe{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <h1>Réinitialiser votre mot de passe</h1>
 
     {{ form_start(requestForm) }}
         {{ form_row(requestForm.email) }}
         <div>
             <small>
-                Enter your email address and we we will send you a
-                link to reset your password.
+                Entrez votre adresse e-mail ci-dessus et vous recevrez un lien pour réinitialiser votre mot de passe.
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary mt-3">Envoyer l'email</button>
     {{ form_end(requestForm) }}
 {% endblock %}
