feat/background-bo-done

--- a/back/templates/base.html.twig
+++ b/back/templates/base.html.twig
@@ -23,8 +23,8 @@
 
     {% include 'back/include/_nav.html.twig' %}
 
-    <body class="background">
-		<div>
+    <body>
+		<div class="background">
             <span></span>
             <span></span>
             <span></span>
