background ok and bugfix in board

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -6,7 +6,9 @@
   justify-content: center;
   align-items: center;
   font-family: 'Quicksand', sans-serif;
-  font-size: 10px;
+  font-size: 1em;
+  height: 15vh;
+  width: 100vw;
 
   .footer-link {
   color:yellow;
