--- a/src/components/Header/ButtonLog/buttonlog.scss
+++ b/src/components/Header/ButtonLog/buttonlog.scss
@@ -9,12 +9,9 @@ align-items: center;
 justify-content: space-around;
 width:250px;
 height:100px;
-position:absolute;
-top:2%;
-right:1%;
 border:none;
 font-family: 'Quicksand', sans-serif;
-
+margin-top: 2em;
 
   .log-button {
 
