--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,10 +1,12 @@
 @use 'src/styles/vars';
 
 .header-container {
-
  display:flex;
  flex-direction: column;
- align-items: center;
- justify-content: space-between;
-  box-sizing: border-box;
+  width: 100vw;
+
+  .header-top {
+    display: flex;
+    justify-content: space-around;
+  }
 }
