--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -21,7 +21,7 @@ $shadows-medium: multiple-box-shadow(200);
 $shadows-big:    multiple-box-shadow(100);
 
 #stars{
-  position: fixed; 
+  position: absolute; 
   left: -100px; 
   width: 1px;
   height: 1px;
@@ -30,6 +30,8 @@ $shadows-big:    multiple-box-shadow(100);
   animation: animStar 50s linear infinite;
   
   &:after{
+    position: absolute;
+    top: 2000px;
     content: " ";
     width: 1px;
     height: 1px;
@@ -38,16 +40,18 @@ $shadows-big:    multiple-box-shadow(100);
   }
 }  
 #stars2{
-  position: fixed;
+  position: absolute;
   left: -100px; 
   width: 2px;
   height: 2px;
   background: transparent;
   box-shadow: $shadows-medium;;
-  animation			: animStar 100s linear infinite;
+  animation: animStar 100s linear infinite;
 
     
   &:after{
+    position: absolute;
+    top: 2000px;
     content: " ";
     width: 2px;
     height: 2px;
@@ -56,7 +60,7 @@ $shadows-big:    multiple-box-shadow(100);
   }
 }  
 #stars3{
-  position: fixed;
+  position: absolute;
   left: -100px;  
   width: 3px;
   height: 3px;
@@ -65,6 +69,8 @@ $shadows-big:    multiple-box-shadow(100);
   animation: animStar 150s linear infinite;
     
   &:after{
+    position: absolute;
+    top: 2000px;
     content: " ";
     width: 3px;
     height: 3px;
@@ -77,7 +83,7 @@ $shadows-big:    multiple-box-shadow(100);
     transform: translateY(0px)
   }
   to	{	
-    transform: translateY(-900px)
+    transform: translateY(-2000px)
   }
 }
 .home-main {
@@ -85,6 +91,7 @@ $shadows-big:    multiple-box-shadow(100);
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 1em;
 
   .home-text {
     color: white;
@@ -93,7 +100,7 @@ $shadows-big:    multiple-box-shadow(100);
     font-size: 1.5rem;
     text-align: center;
     font-variation-settings: "wght" 900, "ital" 1;
-    margin:10px;
+    margin:1.5em;
   }
 .popular-scenarios-container {
   display: flex;
