fix/background-bo

--- a/back/public/css/backoffice.css
+++ b/back/public/css/backoffice.css
@@ -11,10 +11,10 @@
     top: 0;
     left: 0;
     background: black;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
-.background span {
+.star {
     width: 1vmin;
     height: 1vmin;
     border-radius: 1vmin;
@@ -27,7 +27,7 @@
 }
 
 
-.background span:nth-child(0) {
+#star0 {
     color: #a30000;
     top: 63%;
     left: 39%;
@@ -36,7 +36,7 @@
     transform-origin: -3vw -12vh;
     box-shadow: -2vmin 0 1.1949929748777088vmin currentColor;
 }
-.background span:nth-child(1) {
+#star1 {
     color: #a30000;
     top: 11%;
     left: 57%;
@@ -45,7 +45,7 @@
     transform-origin: -14vw 19vh;
     box-shadow: 2vmin 0 0.9441204492408539vmin currentColor;
 }
-.background span:nth-child(2) {
+#star2 {
     color: #e1ff00;
     top: 83%;
     left: 33%;
@@ -54,7 +54,7 @@
     transform-origin: 7vw 22vh;
     box-shadow: 2vmin 0 0.2649876240963456vmin currentColor;
 }
-.background span:nth-child(3) {
+#star3 {
     color: #e1ff00;
     top: 60%;
     left: 51%;
@@ -63,7 +63,7 @@
     transform-origin: -9vw 3vh;
     box-shadow: -2vmin 0 0.2998696311784861vmin currentColor;
 }
-.background span:nth-child(4) {
+#star4 {
     color: #a30000;
     top: 62%;
     left: 71%;
@@ -72,7 +72,7 @@
     transform-origin: -7vw -14vh;
     box-shadow: -2vmin 0 0.7344156587261854vmin currentColor;
 }
-.background span:nth-child(5) {
+#star5 {
     color: #03009e;
     top: 91%;
     left: 10%;
@@ -81,7 +81,7 @@
     transform-origin: 3vw -3vh;
     box-shadow: -2vmin 0 1.0947242069114416vmin currentColor;
 }
-.background span:nth-child(6) {
+#star6 {
     color: #e1ff00;
     top: 55%;
     left: 8%;
@@ -90,7 +90,7 @@
     transform-origin: 25vw 8vh;
     box-shadow: -2vmin 0 0.8367875584769346vmin currentColor;
 }
-.background span:nth-child(7) {
+#star7 {
     color: #a30000;
     top: 53%;
     left: 43%;
@@ -99,7 +99,7 @@
     transform-origin: -4vw -23vh;
     box-shadow: -2vmin 0 0.2618804481604198vmin currentColor;
 }
-.background span:nth-child(8) {
+#star8 {
     color: #e1ff00;
     top: 23%;
     left: 21%;
@@ -108,7 +108,7 @@
     transform-origin: 14vw -16vh;
     box-shadow: 2vmin 0 1.089841512108063vmin currentColor;
 }
-.background span:nth-child(9) {
+#star9 {
     color: #e1ff00;
     top: 97%;
     left: 79%;
@@ -117,7 +117,7 @@
     transform-origin: 7vw -13vh;
     box-shadow: -2vmin 0 0.8077689515767084vmin currentColor;
 }
-.background span:nth-child(10) {
+#star10 {
     color: #03009e;
     top: 59%;
     left: 98%;
@@ -126,7 +126,7 @@
     transform-origin: 15vw -11vh;
     box-shadow: 2vmin 0 0.6386459919979863vmin currentColor;
 }
-.background span:nth-child(11) {
+#star11 {
     color: #03009e;
     top: 16%;
     left: 29%;
@@ -135,7 +135,7 @@
     transform-origin: -2vw -15vh;
     box-shadow: -2vmin 0 0.78543612877898vmin currentColor;
 }
-.background span:nth-child(12) {
+#star12 {
     color: #e1ff00;
     top: 95%;
     left: 60%;
@@ -144,7 +144,7 @@
     transform-origin: 9vw -17vh;
     box-shadow: 2vmin 0 0.7752929988338728vmin currentColor;
 }
-.background span:nth-child(13) {
+#star13 {
     color: #a30000;
     top: 21%;
     left: 26%;
@@ -153,7 +153,7 @@
     transform-origin: 11vw 18vh;
     box-shadow: -2vmin 0 1.03207405233352vmin currentColor;
 }
-.background span:nth-child(14) {
+#star14 {
     color: #03009e;
     top: 69%;
     left: 50%;
@@ -162,7 +162,7 @@
     transform-origin: 11vw -15vh;
     box-shadow: -2vmin 0 0.5405447226895521vmin currentColor;
 }
-.background span:nth-child(15) {
+#star15 {
     color: #e1ff00;
     top: 15%;
     left: 72%;
@@ -171,7 +171,7 @@
     transform-origin: -8vw 13vh;
     box-shadow: -2vmin 0 0.7260254124321095vmin currentColor;
 }
-.background span:nth-child(16) {
+#star16 {
     color: #e1ff00;
     top: 97%;
     left: 52%;
@@ -180,7 +180,7 @@
     transform-origin: -23vw 11vh;
     box-shadow: -2vmin 0 0.8097623858596106vmin currentColor;
 }
-.background span:nth-child(17) {
+#star17 {
     color: #a30000;
     top: 92%;
     left: 53%;
@@ -189,7 +189,7 @@
     transform-origin: 25vw -1vh;
     box-shadow: 2vmin 0 0.48666723945092083vmin currentColor;
 }
-.background span:nth-child(18) {
+#star18 {
     color: #e1ff00;
     top: 69%;
     left: 50%;
@@ -198,7 +198,7 @@
     transform-origin: -3vw 21vh;
     box-shadow: 2vmin 0 0.4741488326398411vmin currentColor;
 }
-.background span:nth-child(19) {
+#star19 {
     color: #a30000;
     top: 68%;
     left: 14%;
@@ -207,7 +207,7 @@
     transform-origin: 2vw 1vh;
     box-shadow: -2vmin 0 0.2704658520444716vmin currentColor;
 }
-.background span:nth-child(20) {
+#star20 {
     color: #e1ff00;
     top: 29%;
     left: 52%;
@@ -216,7 +216,7 @@
     transform-origin: -18vw -21vh;
     box-shadow: -2vmin 0 0.7501949532706809vmin currentColor;
 }
-.background span:nth-child(21) {
+#star21 {
     color: #a30000;
     top: 55%;
     left: 80%;
@@ -225,7 +225,7 @@
     transform-origin: -11vw 13vh;
     box-shadow: 2vmin 0 1.1599131116333403vmin currentColor;
 }
-.background span:nth-child(22) {
+#star22 {
     color: #a30000;
     top: 72%;
     left: 73%;
@@ -234,7 +234,7 @@
     transform-origin: 8vw 17vh;
     box-shadow: -2vmin 0 1.1219293641399384vmin currentColor;
 }
-.background span:nth-child(23) {
+#star23 {
     color: #03009e;
     top: 22%;
     left: 44%;
@@ -243,7 +243,7 @@
     transform-origin: 6vw -18vh;
     box-shadow: 2vmin 0 1.0117654198855397vmin currentColor;
 }
-.background span:nth-child(24) {
+#star24 {
     color: #a30000;
     top: 65%;
     left: 22%;
@@ -252,7 +252,7 @@
     transform-origin: -13vw -13vh;
     box-shadow: 2vmin 0 0.9386951568616153vmin currentColor;
 }
-.background span:nth-child(25) {
+#star25 {
     color: #a30000;
     top: 79%;
     left: 10%;
