querries-nav-title-log-ok

--- a/src/components/Header/ButtonLog/buttonlog.scss
+++ b/src/components/Header/ButtonLog/buttonlog.scss
@@ -37,4 +37,7 @@ font-size:12px;
     font-weight: bolder;
     font-size:12px;
   }
+  @media screen and (max-width: 768px) {
+    margin: auto;
+  } 
 }
