--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,5 +8,10 @@
   .header-top {
     display: flex;
     justify-content: space-around;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      
+    }
   }
 }
