--- a/src/components/Game/Intro/intro.scss
+++ b/src/components/Game/Intro/intro.scss
@@ -16,12 +16,16 @@
   align-items: center;
   background-color: vars.$color-popup-background;
   box-sizing: border-box;
-  width: 50%;
-  height: 45%;
+  width: 40%;
   margin: 1em auto;
   border-bottom: 20px solid vars.$color-title-five ;
   border-right: 10px solid vars.$color-title-two ;  
-  
+
+  .intro-img{
+    width: 300px;
+    height: 300px;
+    margin-top: 1.5em;
+  }
   .intro-title {
     font-family: "Meta";
     font-size: 2rem;
@@ -62,6 +66,8 @@
     font-size: large;
     text-transform: uppercase;
     font-family: 'Quicksand', sans-serif;
+    margin-bottom: 1.5em;
+    margin-top: 1em;
     &:hover {
       text-decoration: underline;
       color:red;
